objects/CS_Operations__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CS_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account you are requesting to update</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operations (Account)</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Days_Open__c</fullName>
        <formula>if(isnull (Closed_Date__c), 
CASE(MOD( Opened_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD(  today()  -  Opened_Date__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( today() - Opened_Date__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( today() - Opened_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( today() - Opened_Date__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( today() - Opened_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD(today() - Opened_Date__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( today() - Opened_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( today () - Opened_Date__c )/7)*5),
CASE(MOD( Opened_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD(  Closed_Date__c  -  Opened_Date__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Closed_Date__c - Opened_Date__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Closed_Date__c - Opened_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Closed_Date__c - Opened_Date__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Closed_Date__c - Opened_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD(Closed_Date__c - Opened_Date__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Closed_Date__c - Opened_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Closed_Date__c - Opened_Date__c )/7)*5))</formula>
        <label>Business Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Operations Requests</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Lead_Notes_Section__c</fullName>
        <inlineHelpText>Channel Lead can provide notes on why or why not this has been approved for Ops to work.</inlineHelpText>
        <label>Channel Lead Notes Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CS_Operations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Notes__c</fullName>
        <label>Close Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <label>Contract Length</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Manager__c</fullName>
        <formula>CreatedBy.Manager.Full_Name__c</formula>
        <label>Created by Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credited_Amount__c</fullName>
        <label>Credited Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Approved_by_Channel_Lead__c</fullName>
        <label>Date Approved by Channel Lead</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Upsell_Occurred__c</fullName>
        <label>Date Upsell Occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Until_SLA2__c</fullName>
        <formula>Expected_Completion_Date__c - today ()</formula>
        <label>Days Until SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_Completion_Date__c</fullName>
        <label>Desired Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Minutes_to_Complete__c</fullName>
        <label>Estimated Minutes to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Franchise_Affected__c</fullName>
        <label>Franchise Affected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_New_Account_Original_Client_ID__c</fullName>
        <label>If New Account, Original Client ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Issue_ID__c</fullName>
        <description>Please use just the issue id from JIRA (ex: YO-11430)</description>
        <label>JIRA Issue ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_URL__c</fullName>
        <formula>IF(JIRA_Issue_ID__c  &lt;&gt; '', 'https://jira.yodle.com/browse/' &amp; JIRA_Issue_ID__c,'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JIRA URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes_Left_in_Current_Month__c</fullName>
        <label>Minutes Left in Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_Saved__c</fullName>
        <label>Minutes Saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Budget__c</fullName>
        <label>New Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Bill_Date__c</fullName>
        <label>Next Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nominated_Team_if_applicable__c</fullName>
        <inlineHelpText>Only fill out this field if you have selection 'Team of the Month' for 'Recognition Category'</inlineHelpText>
        <label>Nominated Team (if applicable)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination_Details__c</fullName>
        <label>Nomination Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nominee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who are you nominating?</description>
        <inlineHelpText>Who are you nominating?</inlineHelpText>
        <label>Nominee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Operations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nominee_Role__c</fullName>
        <formula>Nominee_Name__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominee Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_Impact_of_Project__c</fullName>
        <label>Objective/Impact of Project</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Budget__c</fullName>
        <inlineHelpText>Enter $0 if it is a new account upsell or organic upsell.</inlineHelpText>
        <label>Old Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <label>Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operations_Notes__c</fullName>
        <label>Operations Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations_Request_Due_Date__c</fullName>
        <label>Operations Request Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operations_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organic_Live_Date__c</fullName>
        <label>Organic Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Lead_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Lead Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Operations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Operations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <inlineHelpText>Which report are you referencing in your request?</inlineHelpText>
        <label>Which Report Are You Referencing?</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellFire_ID__c</fullName>
        <label>SellFire ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Accounts_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Accounts Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CS_Operations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <description>Your Name</description>
        <label>Submitted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_Request__c</fullName>
        <inlineHelpText>Include a one sentence summary of what was completed</inlineHelpText>
        <label>Summary of Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Minutes_for_Request__c</fullName>
        <formula>IF( NOT(ISBLANK(Minutes_to_Complete_Request__c)),Minutes_to_Complete_Request__c,Estimated_Minutes_to_Complete__c)</formula>
        <label>Total Minutes for Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_New_Locations__c</fullName>
        <inlineHelpText>Include the total value of the new locations, including budgets, organic, display, etc.</inlineHelpText>
        <label>Total Value of New Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_New_Locations__c</fullName>
        <label>Total # of New Locations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_Downgrade_Other_Notes__c</fullName>
        <label>Upgrade/Downgrade Other Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Upsell_Amount__c</fullName>
        <formula>New_Budget__c - Old_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upsell Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upsell_Billing_Date__c</fullName>
        <label>Upsell Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_is_outdated__c</fullName>
        <label>What is outdated?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_new_process__c</fullName>
        <label>What is the new process?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Sales Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
                <value>
                    <fullName>Request Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_a_Manager__c</fullName>
        <label>Are You a Manager?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Manager</fullName>
                    <default>true</default>
                    <label>Non-Manager</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Requested_By__c</fullName>
        <label>Channel Requested By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>YBN Leadership</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>SEM Marketing Ops</fullName>
                </value>
                <value>
                    <fullName>SEO Marketing Ops</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>New Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Extension_Length__c</fullName>
        <label>Contract Extension Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - No Extension</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_Account_Bill_the_Upsell_Amount__c</fullName>
        <label>Did the Account Bill the Upsell Amount?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_New_Account_Add_Organic__c</fullName>
        <label>Did the New Account Add Organic?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difficulty__c</fullName>
        <label>Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Easy</fullName>
                </value>
                <value>
                    <fullName>2-Fairly Easy</fullName>
                </value>
                <value>
                    <fullName>3-Average</fullName>
                </value>
                <value>
                    <fullName>4-Complicated</fullName>
                </value>
                <value>
                    <fullName>5-Difficult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Downgrade_Reason__c</fullName>
        <label>Downgrade Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Upgrade_Downgrade__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Client wants to match website to old account</fullName>
                </value>
                <value>
                    <fullName>Missing feature / Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exisiting_Corporate_Service_Level__c</fullName>
        <label>Exisiting Corporate Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Value</fullName>
                </value>
                <value>
                    <fullName>Service Level A</fullName>
                </value>
                <value>
                    <fullName>Service Level B</fullName>
                </value>
                <value>
                    <fullName>Service Level C</fullName>
                </value>
                <value>
                    <fullName>Service Level D</fullName>
                </value>
                <value>
                    <fullName>Service Level E</fullName>
                </value>
                <value>
                    <fullName>Service Level F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Service_Level__c</fullName>
        <label>Existing IL Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Value</fullName>
                </value>
                <value>
                    <fullName>Service Level A</fullName>
                </value>
                <value>
                    <fullName>Service Level B</fullName>
                </value>
                <value>
                    <fullName>Service Level C</fullName>
                </value>
                <value>
                    <fullName>Service Level D</fullName>
                </value>
                <value>
                    <fullName>Service Level E</fullName>
                </value>
                <value>
                    <fullName>Service Level F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Very Low</fullName>
                </value>
                <value>
                    <fullName>2-Low</fullName>
                </value>
                <value>
                    <fullName>3-Average</fullName>
                </value>
                <value>
                    <fullName>4-High</fullName>
                </value>
                <value>
                    <fullName>5-Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ineligibility_Reason__c</fullName>
        <label>Ineligibility Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Already listed on Report</fullName>
                </value>
                <value>
                    <fullName>Downsold within 90</fullName>
                </value>
                <value>
                    <fullName>Other Product Deactivation</fullName>
                </value>
                <value>
                    <fullName>Marketing Referral</fullName>
                </value>
                <value>
                    <fullName>Variable Billing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Accounts Didn't Bill</fullName>
                </value>
                <value>
                    <fullName>Accounts Didn't Go Live</fullName>
                </value>
                <value>
                    <fullName>Accounts Were Part of Initial Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Report_Request_Priortiy__c</fullName>
        <label>New Report Request Priortiy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Nice to Have</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Will Not Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nomination_Month__c</fullName>
        <description>For what month's award are you nominating this person or team?</description>
        <inlineHelpText>For what month's award are you nominating this person or team?</inlineHelpText>
        <label>Nomination Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nominee_Office__c</fullName>
        <label>Nominee Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Scottsdale</fullName>
                </value>
                <value>
                    <fullName>Sugar Hill</fullName>
                </value>
                <value>
                    <fullName>Work at Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Scottsdale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_time_Refill_or_Budget_Change__c</fullName>
        <label>Upsell Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time Refill</fullName>
                </value>
                <value>
                    <fullName>Budget Change</fullName>
                </value>
                <value>
                    <fullName>Reactivation</fullName>
                </value>
                <value>
                    <fullName>New Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CS Operations / Training</fullName>
                </value>
                <value>
                    <fullName>Local / Lighthouse</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Corporate_Service_Level__c</fullName>
        <label>Proposed Corporate Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Value</fullName>
                </value>
                <value>
                    <fullName>Service Level A+</fullName>
                </value>
                <value>
                    <fullName>Service Level A</fullName>
                </value>
                <value>
                    <fullName>Service Level B</fullName>
                </value>
                <value>
                    <fullName>Service Level C</fullName>
                </value>
                <value>
                    <fullName>Service Level D</fullName>
                </value>
                <value>
                    <fullName>Service Level E</fullName>
                </value>
                <value>
                    <fullName>Service Level F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recognition_Category__c</fullName>
        <inlineHelpText>What category are you nominating this individual for?</inlineHelpText>
        <label>Recognition Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Are_you_a_Manager__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Superstar</fullName>
                </value>
                <value>
                    <fullName>Superstar Manager</fullName>
                </value>
                <value>
                    <fullName>Team of the Month</fullName>
                </value>
                <value>
                    <fullName>President's Club - Customers Rule</fullName>
                </value>
                <value>
                    <fullName>President's Club - Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Change_Detail__c</fullName>
        <label>Reporting Change Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Billed says No, Account Did Bill</fullName>
                </value>
                <value>
                    <fullName>Contract Extension Incorrect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Approved_By__c</fullName>
        <label>Request Approved By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amy Kramer</fullName>
                </value>
                <value>
                    <fullName>Ashley Warner</fullName>
                </value>
                <value>
                    <fullName>Casey Griffith</fullName>
                </value>
                <value>
                    <fullName>Casey McCurdy</fullName>
                </value>
                <value>
                    <fullName>Cassie Bradbury</fullName>
                </value>
                <value>
                    <fullName>Cecily Bolton</fullName>
                </value>
                <value>
                    <fullName>Emily Liesch</fullName>
                </value>
                <value>
                    <fullName>Erin Brockman</fullName>
                </value>
                <value>
                    <fullName>Jason Normoyle</fullName>
                </value>
                <value>
                    <fullName>Jenna Rozenblat</fullName>
                </value>
                <value>
                    <fullName>Jennifer Hecker</fullName>
                </value>
                <value>
                    <fullName>Joshua Pyle</fullName>
                </value>
                <value>
                    <fullName>Kate Turk</fullName>
                </value>
                <value>
                    <fullName>Kelly Eisenmenger</fullName>
                </value>
                <value>
                    <fullName>Matthew Machado</fullName>
                </value>
                <value>
                    <fullName>Mia Pagonas</fullName>
                </value>
                <value>
                    <fullName>Michele Brevig</fullName>
                </value>
                <value>
                    <fullName>Patricia Delk</fullName>
                </value>
                <value>
                    <fullName>Peter Szalkowski</fullName>
                </value>
                <value>
                    <fullName>Sara Davis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>